[tool.poetry]
name = "learn_returns"
version = "0.1.0"
description = ""
authors = ["Larry Jones <larry.jones@reveal-energy.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.14"
ipython = "^7.23.0"
returns = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
